--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <main class="main">
         <header class="header">
-            <p>Monday, November 7</p>
-            <i class="bi bi-chevron-down" aria-label="Expand Menu"></i>
+            <p id="date"></p>
+            <i class="bi bi-chevron-down" id="toggle-menu" aria-label="Expand Menu"></i>
         </header>
         <div class="calendar">
           
