--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <footer class="footer">
             <div class="timer">
                 <i class="bi bi-dash" aria-label="Decrease Time"></i>
-                <div class="box-min"><span class="minutes">30</span><span>min</span></div>
+                <div class="box-min"><span class="minutes"></span><span>min</span></div>
                 <i class="bi bi-plus" aria-label="Increase Time"></i>
             </div>
             <div class="focus">
